Create desktop background

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,20 @@
 </head>
 
 <body>
-  <h1>Personal Web Desktop</h1>
-  <p>You have some work to do...</p>
+  <div class="animation">
+    <div class="line" id="lineone"></div>
+    <div class="line" id="linetwo"></div>
+    <div class="line" id="linethree"></div>
+  </div>
+
+  <div class="navbar">
+    <div class="test"></div>
+    <div class="test"></div>
+    <div class="test"></div>
+    <div class="test"></div>
+    <div class="test"></div>
+    <div class="test"></div>
+  </div>
 </body>
 
 </html>
