Create dock prototype

--- a/src/index.html
+++ b/src/index.html
@@ -17,14 +17,8 @@
     <div class="line" id="linethree"></div>
   </div>
 
-  <div class="navbar">
-    <div class="test"></div>
-    <div class="test"></div>
-    <div class="test"></div>
-    <div class="test"></div>
-    <div class="test"></div>
-    <div class="test"></div>
-  </div>
+  <mac-dock></mac-dock>
+  
 </body>
 
 </html>
