Create desktop component

--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,7 @@
 </head>
 
 <body>
-  <div class="animation">
-    <div class="line" id="lineone"></div>
-    <div class="line" id="linetwo"></div>
-    <div class="line" id="linethree"></div>
-  </div>
-
-  <mac-dock></mac-dock>
-  
+  <desktop-component></desktop-component>
 </body>
 
 </html>
